Fixed font size for different screen sizes. Removed white space between posts.

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -16,6 +16,10 @@ body {
 .entry,
 .hentry {
 	@include clearfix;
+	&::before,
+	&::after{
+		content: none;
+	}
 
 	h1, h2, h3, h4, h5, h6, p, li {
 		word-wrap: break-word;
@@ -511,8 +515,16 @@ header .entry-meta {
 
 		a{
 			color: white;
-			font-size: -webkit-xxx-large;
+			font-size: x-large;
 			text-shadow: 2px 2px 5px black;
+
+			@media #{$medium} {
+				font-size: -webkit-xxx-large;
+			}
+
+			@media #{$large} {
+				font-size: -webkit-xxx-large;
+			}
 		}
 	}
 }
@@ -521,21 +533,21 @@ header .entry-meta {
 	margin-top: -25px;
 	margin-left: -15px;
 	margin-right: -15px;
-	margin-bottom: 10px;
+	margin-bottom: -30px;
 	position: relative;
 
 	@media #{$medium} {
 		margin-top: -30px;
 		margin-left: -30px;
 		margin-right: -30px;
-		margin-bottom: 15px;
+		margin-bottom: -30px;
 	}
 
 	@media #{$large} {
 		margin-top: -50px;
 		margin-left: -80px;
 		margin-right: -80px;
-		margin-bottom: 20px;
+		margin-bottom: -50px;
 	}
 
 	img {
